--- a/ufund-api/src/main/resources/application.properties
+++ b/ufund-api/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-server.error.include-message=
-needs.file=ufund-api/data/needs.json
+server.error.include-message= always
+needs.file=data/needs.json
+users.file=data/users.json
