--- a/ufund-api/src/main/resources/application.properties
+++ b/ufund-api/src/main/resources/application.properties
@@ -2,4 +2,4 @@ server.error.include-message= always
 needs.file=data/needs.json
 users.file=data/users.json
 carts.file=data/carts.json
-announcments.file=data/announcements.json
+announcements.file=data/announcements.json
